add top list/artist/playlist/playlist highquality command

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -60,6 +60,14 @@
     "cloudmusic.help.style.artist": "曲风歌手 /cloudmusic style artist [styleId]",
     "cloudmusic.help.style.album": "曲风专辑 /cloudmusic style album [styleId]",
 
+    "cloudmusic.help.top.list": "网易云歌曲榜单 /cloudmusic top list",
+    "cloudmusic.help.top.artist": "网易云歌手榜单 /cloudmusic top artist",
+    "cloudmusic.help.top.playlist.highquality.tags": "精品歌单标签 /cloudmusic top playlist highquality tags",
+    "cloudmusic.help.top.playlist.highquality": "网易云精品歌单, 默认全部 /cloudmusic top playlist highquality [tag(可选)]",
+    "cloudmusic.help.top.playlist.tags": "歌单标签 /cloudmusic top playlist tags",
+    "cloudmusic.help.top.playlist.tags.hot": "热门歌单标签 /cloudmusic top playlist tags hot",
+    "cloudmusic.help.top.playlist": "网易云歌单, 默认全部 /cloudmusic top playlist [tag(可选)]",
+
     "cloudmusic.help.search.music": "搜索歌曲 /cloudmusic search music [key]",
     "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
     "cloudmusic.help.search.artist": "搜索歌手 /cloudmusic search artist [key]",
@@ -156,11 +164,19 @@
     "cloudmusic.info.page.style.artist": "曲风 %d - %d 的曲风歌手列表",
     "cloudmusic.info.page.style.album": "曲风 %d - %d 的曲风专辑列表",
     "cloudmusic.info.page.style.children": "曲风 %d - %d 的子曲风列表",
+    "cloudmusic.info.page.top.list": "网易云歌曲榜单",
+    "cloudmusic.info.page.top.artist": "网易云歌手榜单",
+    "cloudmusic.info.page.top.playlist.highquality.tags": "网易云精品歌单标签",
+    "cloudmusic.info.page.top.playlist.highquality": "网易云 %d 精品歌单",
+    "cloudmusic.info.page.top.playlist.tags": "网易云歌单标签",
+    "cloudmusic.info.page.top.playlist.hot.tags": "网易云热门歌单标签",
+    "cloudmusic.info.page.top.playlist": "网易云 %d 歌单",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
 
     "cloudmusic.info.command.playlist.add": "向 %d 歌单添加歌曲 musicId: %d",
     "cloudmusic.info.command.playlist.del": "向 %d 歌单删除歌曲 musicId: %d",
     "cloudmusic.info.command.recommend.music": "播放每日推荐歌曲",
+    "cloudmusic.info.command.tag.not.top.playlist.highquality": "标签 %d 没有精品歌单",
     "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
     "cloudmusic.info.command.intelligence": "进入心动模式播放",
     "cloudmusic.info.command.like": "播放 %d 喜欢的歌曲",
