Add my play record command and dj music command - 0.4.2

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -27,6 +27,8 @@
 
     "cloudmusic.help.dj": "获取电台 /cloudmusic dj [id]",
     "cloudmusic.help.dj.play": "播放电台 /cloudmusic dj play [id]",
+    "cloudmusic.help.dj.music": "获取电台节目 /cloudmusic dj music [id]",
+    "cloudmusic.help.dj.music.play": "播放电台节目 /cloudmusic dj music play [id]",
     "cloudmusic.help.dj.subscribe": "收藏电台 /cloudmusic dj subscribe [id]",
     "cloudmusic.help.dj.unsubscribe": "取消收藏电台 /cloudmusic dj unsubscribe [id]",
 
@@ -51,6 +53,11 @@
     "cloudmusic.help.my.sublist.album": "我收藏的专辑 /cloudmusic my sublist album",
     "cloudmusic.help.my.sublist.artist": "我收藏的歌手 /cloudmusic my sublist artist",
     "cloudmusic.help.my.sublist.dj": "我收藏的歌手 /cloudmusic my sublist dj",
+    "cloudmusic.help.my.record.music": "播放最近播放的歌曲 /cloudmusic my record music",
+    "cloudmusic.help.my.record.djmusic": "播放最近播放的电台节目 /cloudmusic my record djmusic",
+    "cloudmusic.help.my.record.playlist": "最近播放的歌单 /cloudmusic my record playlist",
+    "cloudmusic.help.my.record.album": "最近播放的专辑 /cloudmusic my record album",
+    "cloudmusic.help.my.record.dj": "最近播放的电台 /cloudmusic my record dj",
 
     "cloudmusic.help.style": "获取曲风 /cloudmusic style [styleId]",
     "cloudmusic.help.style.all": "获取曲风列表 /cloudmusic style all",
@@ -104,6 +111,7 @@
     "cloudmusic.shar.album": "分享网易云专辑",
     "cloudmusic.shar.artist": "分享网易云歌手",
     "cloudmusic.shar.dj.radio": "分享网易云电台",
+    "cloudmusic.shar.dj.music": "分享网易云电台节目",
     "cloudmusic.shar.playlist": "分享网易云歌单",
     "cloudmusic.shar.user": "分享网易云用户",
     "cloudmusic.shar.style": "分享网易云曲风",
@@ -174,6 +182,9 @@
     "cloudmusic.info.page.top.playlist.tags": "网易云歌单标签",
     "cloudmusic.info.page.top.playlist.hot.tags": "网易云热门歌单标签",
     "cloudmusic.info.page.top.playlist": "网易云 %d 歌单",
+    "cloudmusic.info.page.record.playlist": "%d 最近播放的歌单",
+    "cloudmusic.info.page.record.album": "%d 最近播放的专辑",
+    "cloudmusic.info.page.record.dj": "%d 最近播放的电台",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
 
     "cloudmusic.info.command.playlist.add": "向 %d 歌单添加歌曲 musicId: %d",
@@ -193,6 +204,11 @@
     "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %d",
     "cloudmusic.info.command.playlist.play": "播放 %d 歌单",
     "cloudmusic.info.command.dj.play": "播放 %d 电台",
+    "cloudmusic.info.command.dj.music.play": "播放 %d 电台节目",
+    "cloudmusic.info.command.record.music": "播放 %d 最近播放的歌曲",
+    "cloudmusic.info.command.record.djmusic": "播放 %d 最近播放的电台节目",
+    "cloudmusic.info.command.user.record.all": "播放 %d 所有时间听歌榜单",
+    "cloudmusic.info.command.user.record.week": "播放 %d 周听歌榜单",
     "cloudmusic.info.command.dj.subscribe": "收藏电台 %d",
     "cloudmusic.info.command.dj.unsubscribe": "取消收藏电台 %d",
     "cloudmusic.info.command.music.like": "红心 %d",
