--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -118,108 +118,108 @@
     "cloudmusic.shar.style": "分享网易云曲风",
 
     "cloudmusic.info.not.cookie": "§c§l无效的 Cookie, 请设置 Cookie 后重试",
-    "cloudmusic.info.page.count": "§c§l===========%d页§c§l===========",
-    "cloudmusic.info.volume": "当前音量: %d",
+    "cloudmusic.info.page.count": "§c§l===========%s页§c§l===========",
+    "cloudmusic.info.volume": "当前音量: %s",
 
-    "cloudmusic.info.music.artist": "%d",
-    "cloudmusic.info.music.album": "专辑: %d",
-    "cloudmusic.info.music.duration": "时长: %d",
-    "cloudmusic.info.music.id": "id: %d",
+    "cloudmusic.info.music.artist": "%s",
+    "cloudmusic.info.music.album": "专辑: %s",
+    "cloudmusic.info.music.duration": "时长: %s",
+    "cloudmusic.info.music.id": "id: %s",
 
-    "cloudmusic.info.playlist.creator": "创建者: %d",
-    "cloudmusic.info.playlist.tags": "标签: %d",
-    "cloudmusic.info.playlist.count": "单曲数: %d 播放数: %d",
-    "cloudmusic.info.playlist.id": "id: %d",
+    "cloudmusic.info.playlist.creator": "创建者: ",
+    "cloudmusic.info.playlist.tags": "标签: ",
+    "cloudmusic.info.playlist.count": "单曲数: %s 播放数: %s",
+    "cloudmusic.info.playlist.id": "id: %s",
 
-    "cloudmusic.info.album.id": "id: %d",
-    "cloudmusic.info.album.size": "单曲数: %d",
+    "cloudmusic.info.album.id": "id: %s",
+    "cloudmusic.info.album.size": "单曲数: %s",
 
-    "cloudmusic.info.user.level": "等级: %d",
-    "cloudmusic.info.user.vip": "会员: %d",
-    "cloudmusic.info.user.id": "id: %d",
+    "cloudmusic.info.user.level": "等级: %s",
+    "cloudmusic.info.user.vip": "会员: %s",
+    "cloudmusic.info.user.id": "id: %s",
 
-    "cloudmusic.info.artist.music": "单曲数: %d",
-    "cloudmusic.info.artist.album": "专辑数: %d",
-    "cloudmusic.info.artist.id": "id: %d",
+    "cloudmusic.info.artist.music": "单曲数: %s",
+    "cloudmusic.info.artist.album": "专辑数: %s",
+    "cloudmusic.info.artist.id": "id: %s",
 
-    "cloudmusic.info.dj.music.radio": "电台: %d",
-    "cloudmusic.info.dj.creator": "主播: %d",
-    "cloudmusic.info.dj.category": "类别: %d",
-    "cloudmusic.info.dj.size": "节目数: %d",
-    "cloudmusic.info.dj.count": "收藏数: %d 分享数: %d",
-    "cloudmusic.info.dj.music.count": "播放数: %d 点赞数: %d",
-    "cloudmusic.info.dj.music.duration": "时长: %d",
-    "cloudmusic.info.dj.music.id": "电台歌曲 id (用于获取歌曲 url): %d",
-    "cloudmusic.info.dj.id": "id: %d",
+    "cloudmusic.info.dj.music.radio": "电台: ",
+    "cloudmusic.info.dj.creator": "主播: ",
+    "cloudmusic.info.dj.category": "类别: ",
+    "cloudmusic.info.dj.size": "节目数: %s",
+    "cloudmusic.info.dj.count": "收藏数: %s 分享数: %s",
+    "cloudmusic.info.dj.music.count": "播放数: %s 点赞数: %s",
+    "cloudmusic.info.dj.music.duration": "时长: %s",
+    "cloudmusic.info.dj.music.id": "电台歌曲 id (用于获取歌曲 url): %s",
+    "cloudmusic.info.dj.id": "id: %s",
 
-    "cloudmusic.info.style.music.count": "单曲数: %d",
-    "cloudmusic.info.style.artist.count": "歌手数: %d",
+    "cloudmusic.info.style.music.count": "单曲数: %s",
+    "cloudmusic.info.style.artist.count": "歌手数: %s",
 
-    "cloudmusic.info.page.music.similar": "%d 的相似歌曲",
-    "cloudmusic.info.page.music.similar.playlist": "%d 的相似歌单",
-    "cloudmusic.info.page.artist.album": "%d 的所有专辑",
-    "cloudmusic.info.page.artist.similar": "%d 的相似歌手",
-    "cloudmusic.info.page.user.playlist": "%d 所有的歌单",
-    "cloudmusic.info.page.user.dj": "%d 创建的所有电台",
-    "cloudmusic.info.page.recommend.playlist": "%d 的每日推荐歌单",
-    "cloudmusic.info.page.sublist.album": "%d 的所有专辑收藏",
-    "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
-    "cloudmusic.info.page.sublist.dj": "%d 的所有电台收藏",
-    "cloudmusic.info.page.preference.style": "%d 的曲风偏好",
-    "cloudmusic.info.page.search": "%d 的搜索结果",
+    "cloudmusic.info.page.music.similar": "%s 的相似歌曲",
+    "cloudmusic.info.page.music.similar.playlist": "%s 的相似歌单",
+    "cloudmusic.info.page.artist.album": "%s 的所有专辑",
+    "cloudmusic.info.page.artist.similar": "%s 的相似歌手",
+    "cloudmusic.info.page.user.playlist": "%s 所有的歌单",
+    "cloudmusic.info.page.user.dj": "%s 创建的所有电台",
+    "cloudmusic.info.page.recommend.playlist": "%s 的每日推荐歌单",
+    "cloudmusic.info.page.sublist.album": "%s 的所有专辑收藏",
+    "cloudmusic.info.page.sublist.artist": "%s 的所有歌手收藏",
+    "cloudmusic.info.page.sublist.dj": "%s 的所有电台收藏",
+    "cloudmusic.info.page.preference.style": "%s 的曲风偏好",
+    "cloudmusic.info.page.search": "%s 的搜索结果",
     "cloudmusic.info.page.playing.all": "播放列表",
-    "cloudmusic.info.page.user.playlist.add": "向 %d 用户歌单添加歌曲",
-    "cloudmusic.info.page.user.playlist.del": "向 %d 用户歌单删除歌曲",
+    "cloudmusic.info.page.user.playlist.add": "向 %s 用户歌单添加歌曲",
+    "cloudmusic.info.page.user.playlist.del": "向 %s 用户歌单删除歌曲",
     "cloudmusic.info.page.style": "曲风列表",
-    "cloudmusic.info.page.style.music": "曲风 %d - %d 的曲风歌曲列表",
-    "cloudmusic.info.page.style.playlist": "曲风 %d - %d 的曲风歌单列表",
-    "cloudmusic.info.page.style.artist": "曲风 %d - %d 的曲风歌手列表",
-    "cloudmusic.info.page.style.album": "曲风 %d - %d 的曲风专辑列表",
-    "cloudmusic.info.page.style.children": "曲风 %d - %d 的子曲风列表",
+    "cloudmusic.info.page.style.music": "曲风 %s - %s 的曲风歌曲列表",
+    "cloudmusic.info.page.style.playlist": "曲风 %s - %s 的曲风歌单列表",
+    "cloudmusic.info.page.style.artist": "曲风 %s - %s 的曲风歌手列表",
+    "cloudmusic.info.page.style.album": "曲风 %s - %s 的曲风专辑列表",
+    "cloudmusic.info.page.style.children": "曲风 %s - %s 的子曲风列表",
     "cloudmusic.info.page.top.list": "网易云歌曲榜单",
     "cloudmusic.info.page.top.artist": "网易云歌手榜单",
     "cloudmusic.info.page.top.playlist.highquality.tags": "网易云精品歌单标签",
-    "cloudmusic.info.page.top.playlist.highquality": "网易云 %d 精品歌单",
+    "cloudmusic.info.page.top.playlist.highquality": "网易云 %s 精品歌单",
     "cloudmusic.info.page.top.playlist.tags": "网易云歌单标签",
     "cloudmusic.info.page.top.playlist.hot.tags": "网易云热门歌单标签",
-    "cloudmusic.info.page.top.playlist": "网易云 %d 歌单",
-    "cloudmusic.info.page.record.playlist": "%d 最近播放的歌单",
-    "cloudmusic.info.page.record.album": "%d 最近播放的专辑",
-    "cloudmusic.info.page.record.dj": "%d 最近播放的电台",
+    "cloudmusic.info.page.top.playlist": "网易云 %s 歌单",
+    "cloudmusic.info.page.record.playlist": "%s 最近播放的歌单",
+    "cloudmusic.info.page.record.album": "%s 最近播放的专辑",
+    "cloudmusic.info.page.record.dj": "%s 最近播放的电台",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
 
-    "cloudmusic.info.command.playlist.add": "向 %d 歌单添加歌曲 musicId: %d",
-    "cloudmusic.info.command.playlist.del": "向 %d 歌单删除歌曲 musicId: %d",
+    "cloudmusic.info.command.playlist.add": "向 %s 歌单添加歌曲 musicId: %s",
+    "cloudmusic.info.command.playlist.del": "向 %s 歌单删除歌曲 musicId: %s",
     "cloudmusic.info.command.recommend.music": "播放每日推荐歌曲",
-    "cloudmusic.info.command.tag.not.top.playlist.highquality": "标签 %d 没有精品歌单",
+    "cloudmusic.info.command.tag.not.top.playlist.highquality": "标签 %s 没有精品歌单",
     "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
     "cloudmusic.info.command.intelligence": "进入心动模式播放",
-    "cloudmusic.info.command.like": "播放 %d 喜欢的歌曲",
-    "cloudmusic.info.command.album.subscribe": "收藏专辑 %d",
-    "cloudmusic.info.command.album.unsubscribe": "取消收藏专辑 %d",
-    "cloudmusic.info.command.album.play": "播放 %d 专辑",
-    "cloudmusic.info.command.artist.subscribe": "收藏歌手 %d",
-    "cloudmusic.info.command.artist.unsubscribe": "取消收藏歌手 %d",
-    "cloudmusic.info.command.artist.top.play": "播放 %d 热门 50 首",
-    "cloudmusic.info.command.playlist.subscribe": "收藏歌单 %d",
-    "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %d",
-    "cloudmusic.info.command.playlist.play": "播放 %d 歌单",
-    "cloudmusic.info.command.dj.play": "播放 %d 电台",
-    "cloudmusic.info.command.dj.music.play": "播放 %d 电台节目",
-    "cloudmusic.info.command.record.music": "播放 %d 最近播放的歌曲",
-    "cloudmusic.info.command.record.djmusic": "播放 %d 最近播放的电台节目",
-    "cloudmusic.info.command.user.record.all": "播放 %d 所有时间听歌榜单",
-    "cloudmusic.info.command.user.record.week": "播放 %d 周听歌榜单",
-    "cloudmusic.info.command.dj.subscribe": "收藏电台 %d",
-    "cloudmusic.info.command.dj.unsubscribe": "取消收藏电台 %d",
-    "cloudmusic.info.command.music.like": "红心 %d",
-    "cloudmusic.info.command.music.unlike": "取消红心 %d",
-    "cloudmusic.info.command.music.play": "播放 %d",
-    "cloudmusic.info.command.trash": "将 %d 扔进垃圾桶",
-    "cloudmusic.info.command.style.not.children": "曲风 %d - %d 没有子曲风",
-    "cloudmusic.info.command.login": "成功登录至 %d",
+    "cloudmusic.info.command.like": "播放 %s 喜欢的歌曲",
+    "cloudmusic.info.command.album.subscribe": "收藏专辑 %s",
+    "cloudmusic.info.command.album.unsubscribe": "取消收藏专辑 %s",
+    "cloudmusic.info.command.album.play": "播放 %s 专辑",
+    "cloudmusic.info.command.artist.subscribe": "收藏歌手 %s",
+    "cloudmusic.info.command.artist.unsubscribe": "取消收藏歌手 %s",
+    "cloudmusic.info.command.artist.top.play": "播放 %s 热门 50 首",
+    "cloudmusic.info.command.playlist.subscribe": "收藏歌单 %s",
+    "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %s",
+    "cloudmusic.info.command.playlist.play": "播放 %s 歌单",
+    "cloudmusic.info.command.dj.play": "播放 %s 电台",
+    "cloudmusic.info.command.dj.music.play": "播放 %s 电台节目",
+    "cloudmusic.info.command.record.music": "播放 %s 最近播放的歌曲",
+    "cloudmusic.info.command.record.djmusic": "播放 %s 最近播放的电台节目",
+    "cloudmusic.info.command.user.record.all": "播放 %s 所有时间听歌榜单",
+    "cloudmusic.info.command.user.record.week": "播放 %s 周听歌榜单",
+    "cloudmusic.info.command.dj.subscribe": "收藏电台 %s",
+    "cloudmusic.info.command.dj.unsubscribe": "取消收藏电台 %s",
+    "cloudmusic.info.command.music.like": "红心 %s",
+    "cloudmusic.info.command.music.unlike": "取消红心 %s",
+    "cloudmusic.info.command.music.play": "播放 %s",
+    "cloudmusic.info.command.trash": "将 %s 扔进垃圾桶",
+    "cloudmusic.info.command.style.not.children": "曲风 %s - %s 没有子曲风",
+    "cloudmusic.info.command.login": "成功登录至 %s",
     "cloudmusic.info.command.login.send.captcha": "成功向手机号发送验证码...",
-    "cloudmusic.info.command.country.code": "设置手机号国家码为 %d...",
+    "cloudmusic.info.command.country.code": "设置手机号国家码为 %s...",
 
     "cloudmusic.options.play": "[播放]",
     "cloudmusic.options.shar": "[分享]",
@@ -258,12 +258,12 @@
     "cloudmusic.exception.login.501": "登录失败, 未注册",
     "cloudmusic.exception.login.502": "登录失败, 密码错误",
     "cloudmusic.exception.login.503": "登录失败, 验证码错误",
-    "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %d",
+    "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %s",
     "cloudmusic.exception.login.qr.code": "二维码过期...",
     "cloudmusic.exception.login.qr.code.time.out": "等待扫码超时...",
     "cloudmusic.exception.music.get.url": "歌曲 %s 暂无音源跳过播放...",
-    "cloudmusic.exception.http": "网络请求重试超出最大次数 %d 次, 错误: %s",
-    "cloudmusic.exception.http.download": "下载文件重试超出最大次数 %d 次, 错误: %s",
+    "cloudmusic.exception.http": "网络请求重试超出最大次数 %s 次, 错误: %s",
+    "cloudmusic.exception.http.download": "下载文件重试超出最大次数 %s 次, 错误: %s",
 
     "cloudmusic.play.quality.standard": "标准",
     "cloudmusic.play.quality.higher": "较高",
