optimizing page code, del TextClick

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -101,15 +101,17 @@
     "cloudmusic.shar.playlist": "分享网易云歌单",
     "cloudmusic.shar.user": "分享网易云用户",
     "cloudmusic.shar.style": "分享网易云曲风",
-    "cloudmusic.info.not.cookie": "§c§l无效的 Cookie, 请设置 Cookie 后重试",
     "cloudmusic.info.page.count": "§c§l===========%s页§c§l===========",
     "cloudmusic.info.volume": "当前音量: %s",
-    "cloudmusic.info.music.artist": "%s",
-    "cloudmusic.info.music.album": "专辑: %s",
+    "cloudmusic.info.music.artist.show": "点击查看歌手",
+    "cloudmusic.options.info.music.album": "专辑: ",
+    "cloudmusic.options.info.music.album.show": "点击查看专辑",
     "cloudmusic.info.music.duration": "时长: %s",
     "cloudmusic.info.music.id": "id: %s",
-    "cloudmusic.info.playlist.creator": "创建者: %s",
+    "cloudmusic.options.info.playlist.creator": "创建者: ",
+    "cloudmusic.options.info.playlist.creator.show": "点击查看歌单创建者",
     "cloudmusic.info.playlist.tags": "标签: %s",
+    "cloudmusic.info.playlist.tag.show": "点击查看更多 %s 标签歌单",
     "cloudmusic.info.playlist.count": "单曲数: %s 播放数: %s",
     "cloudmusic.info.playlist.id": "id: %s",
     "cloudmusic.info.album.id": "id: %s",
@@ -120,9 +122,13 @@
     "cloudmusic.info.artist.music": "单曲数: %s",
     "cloudmusic.info.artist.album": "专辑数: %s",
     "cloudmusic.info.artist.id": "id: %s",
-    "cloudmusic.info.dj.music.radio": "电台: %s",
+    "cloudmusic.options.info.dj.music.radio": "电台: ",
+    "cloudmusic.options.info.dj.music.radio.show": "点击查看电台",
+    "cloudmusic.options.info.dj.creator": "主播: ",
     "cloudmusic.info.dj.creator": "主播: %s",
+    "cloudmusic.options.info.dj.creator.show": "点击查看电台主播",
     "cloudmusic.info.dj.category": "类别: %s",
+    "cloudmusic.info.dj.category.show": "点击查看电台类别",
     "cloudmusic.info.dj.size": "节目数: %s",
     "cloudmusic.info.dj.count": "收藏数: %s 分享数: %s",
     "cloudmusic.info.dj.music.count": "播放数: %s 点赞数: %s",
@@ -209,31 +215,61 @@
     "cloudmusic.info.hotkey.play.volume.down": "将音量下降至 %s 百分比",
     "cloudmusic.options.default.show": "执行选项",
     "cloudmusic.options.play": "[播放]",
+    "cloudmusic.options.play.show": "点击播放这个资源",
     "cloudmusic.options.shar": "[分享]",
+    "cloudmusic.options.shar.show": "点击向其他人分享这个资源",
     "cloudmusic.options.play.top50": "[热门50首]",
+    "cloudmusic.options.play.top50.show": "点击播放这个歌手的热门50首歌曲",
     "cloudmusic.options.album": "[专辑]",
+    "cloudmusic.options.album.show": "点击查看专辑",
     "cloudmusic.options.like": "[红心]",
+    "cloudmusic.options.like.show": "点击红心这个歌曲",
     "cloudmusic.options.unlike": "[取消红心]",
+    "cloudmusic.options.unlike.show": "点击取消这个歌曲的红心",
     "cloudmusic.options.playlist.add": "[向歌单添加歌曲]",
+    "cloudmusic.options.playlist.add.show": "点击选择向哪个歌单添加这个歌曲",
     "cloudmusic.options.playlist.del": "[向歌单删除歌曲]",
+    "cloudmusic.options.playlist.del.show": "点击选择向哪个歌单删除这个歌曲",
     "cloudmusic.options.similar.music": "[相似歌曲]",
+    "cloudmusic.options.similar.music.show": "点击查看这个歌曲的相似歌曲",
     "cloudmusic.options.similar.playlist": "[相似歌单]",
+    "cloudmusic.options.similar.playlist.show": "点击查看这个歌曲的相似歌单",
     "cloudmusic.options.similar.artist": "[相似歌手]",
+    "cloudmusic.options.similar.artist.show": "点击查看这个歌手的相似歌手",
     "cloudmusic.options.subscribe": "[收藏]",
+    "cloudmusic.options.subscribe.show": "点击收藏这个资源",
     "cloudmusic.options.unsubscribe": "[取消收藏]",
+    "cloudmusic.options.unsubscribe.show": "点击取消这个资源的收藏",
     "cloudmusic.options.user.like": "[喜欢的歌曲]",
+    "cloudmusic.options.user.like.show": "点击播放这个用户红心的歌曲",
     "cloudmusic.options.user.playlist": "[用户歌单]",
+    "cloudmusic.options.user.playlist.show": "点击查看这个用户创建的歌单",
     "cloudmusic.options.user.dj": "[用户电台]",
+    "cloudmusic.options.user.dj.show": "点击查看这个用户创建的电台",
     "cloudmusic.options.record.all": "[听歌榜单(所有时间)]",
+    "cloudmusic.options.record.all.show": "点击播放这个用户的总计听歌榜单",
     "cloudmusic.options.record.week": "[听歌榜单(周)]",
+    "cloudmusic.options.record.week.show": "点击播放这个用户的本周听歌榜单",
     "cloudmusic.options.style.music": "[曲风歌曲]",
+    "cloudmusic.options.style.music.show": "点击查看该曲风的歌曲",
     "cloudmusic.options.style.playlist": "[曲风歌单]",
+    "cloudmusic.options.style.playlist.show": "点击查看该曲风的歌单",
     "cloudmusic.options.style.artist": "[曲风歌手]",
+    "cloudmusic.options.style.artist.show": "点击查看该曲风的歌手",
     "cloudmusic.options.style.album": "[曲风专辑]",
+    "cloudmusic.options.style.album.show": "点击查看该曲风的专辑",
     "cloudmusic.options.children.style": "[子曲风]",
+    "cloudmusic.options.children.style.show": "点击查看曲风所有子类型",
+    "cloudmusic.options.hot.comment": "[热评]",
+    "cloudmusic.options.hot.comment.show": "点击查看该资源热评",
+    "cloudmusic.options.comment": "[评论]",
+    "cloudmusic.options.comment.show": "点击查看该资源评论",
     "cloudmusic.options.page.prev": "[上一页]",
+    "cloudmusic.options.page.prev.show": "点击查看上一页",
     "cloudmusic.options.page.next": "[下一页]",
+    "cloudmusic.options.page.next.show": "点击查看下一页",
     "cloudmusic.options.page.to": "[跳转至...]",
+    "cloudmusic.options.page.to.show": "点击并补充页数进行跳转",
     "cloudmusic.exception.music.id": "§c§l找不到歌曲, 请检查歌曲 id",
     "cloudmusic.exception.album.id": "§c§l找不到专辑, 请检查专辑 id",
     "cloudmusic.exception.user.id": "§c§l无法获取用户, 请检查用户 id",
