add music/playlist/album/dj/djmusic comment and hot comment

--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -5,12 +5,16 @@
     "cloudmusic.help.music.unlike": "取消红心歌曲 /cloudmusic music unlike [id]",
     "cloudmusic.help.music.similar.music": "获取歌曲相似歌曲 /cloudmusic music similar music [id]",
     "cloudmusic.help.music.similar.playlist": "获取歌曲相似歌单 /cloudmusic music similar playlist [id]",
+    "cloudmusic.help.music.comment": "获取歌曲评论 /cloudmusic music comment [id]",
+    "cloudmusic.help.music.hot.comment": "获取歌曲热评 /cloudmusic music hotComment [id]",
     "cloudmusic.help.playlist": "获取歌单 /cloudmusic playlist [id]",
     "cloudmusic.help.playlist.play": "播放歌单 /cloudmusic music playlist [id]",
     "cloudmusic.help.playlist.subscribe": "收藏歌单 /cloudmusic playlist subscribe [id]",
     "cloudmusic.help.playlist.unsubscribe": "取消收藏歌单 /cloudmusic playlist unsubscribe [id]",
     "cloudmusic.help.playlist.add": "歌单添加歌曲 /cloudmusic playlist add [id] [歌曲 id]",
     "cloudmusic.help.playlist.del": "歌单删除歌曲 /cloudmusic playlist del [id] [歌曲 id]",
+    "cloudmusic.help.playlist.comment": "获取歌单评论 /cloudmusic playlist comment [id]",
+    "cloudmusic.help.playlist.hot.comment": "获取歌单热评 /cloudmusic playlist hotComment [id]",
     "cloudmusic.help.artist": "获取歌手 /cloudmusic artist [id]",
     "cloudmusic.help.artist.top": "播放歌手热门 50 首 /cloudmusic artist top [id]",
     "cloudmusic.help.artist.album": "查看歌手所有专辑 /cloudmusic artist album [id]",
@@ -21,12 +25,18 @@
     "cloudmusic.help.album.play": "播放专辑 /cloudmusic album play [id]",
     "cloudmusic.help.album.subscribe": "收藏专辑 /cloudmusic album subscribe [id]",
     "cloudmusic.help.album.unsubscribe": "取消收藏专辑 /cloudmusic album unsubscribe [id]",
+    "cloudmusic.help.album.comment": "获取专辑评论 /cloudmusic album comment [id]",
+    "cloudmusic.help.album.hot.comment": "获取专辑热评 /cloudmusic album hotComment [id]",
     "cloudmusic.help.dj": "获取电台 /cloudmusic dj [id]",
     "cloudmusic.help.dj.play": "播放电台 /cloudmusic dj play [id]",
     "cloudmusic.help.dj.music": "获取电台节目 /cloudmusic dj music [id]",
     "cloudmusic.help.dj.music.play": "播放电台节目 /cloudmusic dj music play [id]",
+    "cloudmusic.help.dj.music.comment": "获取电台节目评论 /cloudmusic dj music comment [id]",
+    "cloudmusic.help.dj.music.hot.comment": "获取电台节目热评 /cloudmusic dj hotComment [id]",
     "cloudmusic.help.dj.subscribe": "收藏电台 /cloudmusic dj subscribe [id]",
     "cloudmusic.help.dj.unsubscribe": "取消收藏电台 /cloudmusic dj unsubscribe [id]",
+    "cloudmusic.help.dj.comment": "获取电台评论 /cloudmusic dj comment [id]",
+    "cloudmusic.help.dj.hot.comment": "获取电台热评 /cloudmusic dj hotComment [id]",
     "cloudmusic.help.user": "获取用户 /cloudmusic user [id]",
     "cloudmusic.help.user.playlist": "获取用户歌单 /cloudmusic user playlist [id]",
     "cloudmusic.help.user.dj": "获取用户创建的所有电台 /cloudmusic user dj [id]",
@@ -178,6 +188,18 @@
     "cloudmusic.info.page.record.dj": "%s 最近播放的电台",
     "cloudmusic.info.page.music.comments": "歌曲 %s 的评论",
     "cloudmusic.info.page.music.hot.comments": "歌曲 %s 的热评",
+    "cloudmusic.info.page.playlist.comments": "歌单 %s 的评论",
+    "cloudmusic.info.page.playlist.hot.comments": "歌单 %s 的热论",
+    "cloudmusic.info.page.album.comments": "专辑 %s 的评论",
+    "cloudmusic.info.page.album.hot.comments": "专辑 %s 的热论",
+    "cloudmusic.info.page.dj.radio.comments": "电台 %s 的评论",
+    "cloudmusic.info.page.dj.radio.hot.comments": "电台 %s 的热论",
+    "cloudmusic.info.page.dj.music.comments": "电台节目 %s 的评论",
+    "cloudmusic.info.page.dj.music.hot.comments": "电台节目 %s 的热论",
+    "cloudmusic.page.item.comments.like": "点赞数: %s",
+    "cloudmusic.info.comment.be.replied": "§b回复 %s - %s§r§7: %s",
+    "cloudmusic.info.page.comment.null": "该评论已删除",
+    "cloudmusic.info.page.comment.err.null": "该评论涉及违规内容，经举报已被屏蔽",
     "cloudmusic.info.page.help": "CloudMusic 帮助",
     "cloudmusic.info.command.playlist.add": "向 %s 歌单添加歌曲 musicId: %s",
     "cloudmusic.info.command.playlist.del": "向 %s 歌单删除歌曲 musicId: %s",
@@ -264,6 +286,14 @@
     "cloudmusic.options.hot.comment.show": "点击查看该资源热评",
     "cloudmusic.options.comment": "[评论]",
     "cloudmusic.options.comment.show": "点击查看该资源评论",
+    "cloudmusic.options.comment.floors": "[子评论]",
+    "cloudmusic.options.comment.floors.show": "点击查看该评论下的回复",
+    "cloudmusic.options.comment.reply": "[回复]",
+    "cloudmusic.options.comment.reply.show": "点击并补充回复內容进行回复评论",
+    "cloudmusic.options.comment.like": "[点赞]",
+    "cloudmusic.options.comment.like.show": "点击点赞评论",
+    "cloudmusic.options.comment.delete": "[删除]",
+    "cloudmusic.options.comment.delete.show": "点击删除评论",
     "cloudmusic.options.page.prev": "[上一页]",
     "cloudmusic.options.page.prev.show": "点击查看上一页",
     "cloudmusic.options.page.next": "[下一页]",
